--- a/apps/box/package.json
+++ b/apps/box/package.json
@@ -15,7 +15,7 @@
     "@react-native-firebase/app": "*",
     "@react-native-firebase/crashlytics": "*",
     "@react-native-picker/picker": "2.4.10",
-    "@react-native/metro-config": "*",
+    "@react-native/metro-config": "^0.73.2",
     "@react-navigation/bottom-tabs": "*",
     "@react-navigation/material-top-tabs": "*",
     "@react-navigation/native": "*",
@@ -23,7 +23,7 @@
     "@react-navigation/stack": "*",
     "@react-spring/three": "*",
     "@react-three/fiber": "*",
-    "@shopify/react-native-skia": "0.1.196",
+    "@shopify/react-native-skia": "0.1.228",
     "@shopify/restyle": "*",
     "@testing-library/jest-native": "*",
     "@testing-library/react-native": "*",
@@ -42,13 +42,13 @@
     "node-libs-react-native": "*",
     "react": "*",
     "react-content-loader": "*",
-    "react-native": "0.72.10",
+    "react-native": "0.73.2",
     "react-native-background-timer": "*",
     "react-native-ble-manager": "*",
     "react-native-config": "*",
     "react-native-device-info": "*",
     "react-native-elements": "*",
-    "react-native-gesture-handler": "~2.12.0",
+    "react-native-gesture-handler": "~2.14.0",
     "react-native-get-random-values": "~1.9.0",
     "react-native-keyboard-aware-scroll-view": "*",
     "react-native-keychain": "*",
@@ -57,11 +57,11 @@
     "react-native-pager-view": "6.2.0",
     "react-native-paper": "*",
     "react-native-randombytes": "*",
-    "react-native-reanimated": "~3.3.0",
+    "react-native-reanimated": "~3.6.2",
     "react-native-reanimated-carousel": "*",
     "react-native-redash": "*",
     "react-native-safe-area-context": "4.6.3",
-    "react-native-screens": "~3.22.0",
+    "react-native-screens": "~3.29.0",
     "react-native-svg": "13.9.0",
     "react-native-svg-transformer": "*",
     "react-native-tab-view": "*",
