--- a/package.json
+++ b/package.json
@@ -17,94 +17,95 @@
   },
   "private": true,
   "dependencies": {
-    "@babel/core": "^7.20.0",
+    "@babel/core": "^7.27.4",
     "@babel/plugin-proposal-nullish-coalescing-operator": "^7.0.0-0",
     "@babel/plugin-proposal-optional-chaining": "^7.0.0-0",
     "@babel/plugin-proposal-private-methods": "*",
     "@babel/plugin-transform-arrow-functions": "^7.0.0-0",
     "@babel/plugin-transform-shorthand-properties": "^7.0.0-0",
     "@babel/plugin-transform-template-literals": "^7.0.0-0",
-    "@babel/preset-env": "^7.1.6",
+    "@babel/preset-env": "^7.27.2",
     "@ethersproject/shims": "^5.7.0",
     "@functionland/fula-sec": "^2.0.0",
     "@functionland/react-native-fula": "1.55.18",
-    "@gorhom/bottom-sheet": "^4.5.1",
-    "@metamask/sdk": "^0.30.0",
-    "@metamask/sdk-react": "^0.30.0",
-    "@notifee/react-native": "^7.8.2",
-    "@react-native-async-storage/async-storage": "1.18.2",
-    "@react-native-clipboard/clipboard": "^1.12.1",
-    "@react-native-community/netinfo": "9.3.10",
-    "@react-native-community/slider": "4.4.2",
-    "@react-native-firebase/app": "^18.7.1",
-    "@react-native-firebase/crashlytics": "^18.7.1",
-    "@react-native-picker/picker": "2.4.10",
-    "@react-navigation/bottom-tabs": "^6.5.11",
-    "@react-navigation/material-top-tabs": "^6.6.5",
-    "@react-navigation/native": "^6.1.9",
-    "@react-navigation/native-stack": "^6.9.17",
-    "@react-navigation/stack": "^6.3.20",
-    "@react-spring/three": "^9.7.3",
-    "@react-three/fiber": "^8.15.11",
+    "@gorhom/bottom-sheet": "^5.2.8",
+    "@metamask/sdk": "^0.34.0",
+    "@metamask/sdk-react": "^0.33.1",
+    "@notifee/react-native": "^9.1.8",
+    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-clipboard/clipboard": "^1.16.3",
+    "@react-native-community/netinfo": "^11.4.1",
+    "@react-native-community/slider": "^5.1.2",
+    "@react-native-firebase/app": "^23.8.3",
+    "@react-native-firebase/crashlytics": "^23.8.3",
+    "@react-native-picker/picker": "^2.11.4",
+    "@react-navigation/bottom-tabs": "^7.10.1",
+    "@react-navigation/material-top-tabs": "^7.4.13",
+    "@react-navigation/native": "^7.1.28",
+    "@react-navigation/native-stack": "^7.10.1",
+    "@react-navigation/stack": "^7.6.16",
+    "@react-spring/three": "^10.0.3",
+    "@react-three/fiber": "^9.5.0",
     "@rneui/base": "^4.0.0-rc.8",
     "@rneui/themed": "^4.0.0-rc.8",
-    "@shopify/react-native-skia": "0.1.196",
-    "@shopify/restyle": "^2.4.2",
-    "@visx/scale": "^3.5.0",
+    "@shopify/react-native-skia": "^2.4.14",
+    "@shopify/restyle": "^2.4.5",
+    "@visx/scale": "^3.12.0",
     "@walletconnect/encoding": "^1.0.2",
     "@walletconnect/react-native-compat": "^2.10.5",
     "@web3modal/core-react-native": "*",
     "@web3modal/wagmi-react-native": "^1.1.1",
-    "axios": "^1.10.0",
+    "axios": "^1.13.2",
     "big-integer": "^1.6.52",
     "eciesjs": "^0.4.6",
     "ethers": "5.7.2",
-    "expo": "49.0.21",
-    "expo-asset": "~8.10.1",
-    "expo-font": "~11.4.0",
-    "expo-gl": "~13.0.1",
-    "expo-three": "^7.0.0",
+    "expo": "~54.0.31",
+    "expo-asset": "~12.0.12",
+    "expo-font": "~14.0.11",
+    "expo-gl": "~16.0.9",
+    "expo-three": "^8.0.0",
     "i18next": "^24.2.2",
     "i18next-resources-to-backend": "^1.2.1",
-    "moment": "^2.29.4",
+    "moment": "^2.30.1",
     "node-libs-react-native": "^1.2.1",
-    "react": "18.2.0",
-    "react-content-loader": "^6.2.1",
-    "react-dom": "18.2.0",
+    "react": "19.0.0",
+    "react-content-loader": "^7.0.2",
+    "react-dom": "19.0.0",
     "react-i18next": "^15.4.1",
-    "react-native": "0.72.10",
+    "react-native": "0.83.1",
     "react-native-background-timer": "^2.4.1",
-    "react-native-ble-manager": "^11.5.7",
-    "react-native-device-info": "^10.12.0",
+    "react-native-ble-manager": "^12.4.4",
+    "react-native-device-info": "^14.0.4",
     "react-native-elements": "^3.4.3",
-    "react-native-gesture-handler": "~2.12.0",
-    "react-native-get-random-values": "~1.9.0",
+    "react-native-gesture-handler": "^2.24.0",
+    "react-native-get-random-values": "^1.11.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
-    "react-native-keychain": "^9.0.0",
-    "react-native-localize": "^3.0.4",
+    "react-native-keychain": "^9.2.2",
+    "react-native-localize": "^3.4.1",
     "react-native-modal": "^13.0.1",
-    "react-native-pager-view": "6.2.0",
-    "react-native-paper": "*",
-    "react-native-permissions": "^5.0.0",
-    "react-native-qrcode-svg": "^6.2.0",
+    "react-native-pager-view": "^6.6.1",
+    "react-native-paper": "^5.13.1",
+    "react-native-permissions": "^5.4.0",
+    "react-native-qrcode-svg": "^6.3.14",
     "react-native-randombytes": "^3.6.1",
-    "react-native-reanimated": "~3.3.0",
-    "react-native-reanimated-carousel": "^3.5.1",
-    "react-native-redash": "^18.1.1",
-    "react-native-safe-area-context": "4.6.3",
-    "react-native-screens": "~3.22.0",
-    "react-native-svg": "13.9.0",
-    "react-native-svg-transformer": "^1.1.0",
+    "react-native-reanimated": "^4.2.1",
+    "react-native-reanimated-carousel": "^4.0.3",
+    "react-native-redash": "^18.1.3",
+    "react-native-safe-area-context": "^5.3.0",
+    "react-native-screens": "^4.10.0",
+    "react-native-svg": "^15.11.2",
+    "react-native-svg-transformer": "^1.5.0",
     "react-native-syntax-highlighter": "^2.1.0",
-    "react-native-tab-view": "^3.5.2",
+    "react-native-tab-view": "^4.0.5",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-vector-icons": "^10.2.0",
-    "react-native-webview": "13.2.2",
+    "react-native-webview": "^13.13.5",
     "react-native-wheel-color-picker": "^1.2.0",
     "react-native-wifi-reborn": "^4.13.0",
+    "react-native-worklets": "^0.7.2",
     "react-native-zeroconf": "^0.13.8",
     "text-encoding-polyfill": "^0.6.7",
-    "three": "^0.145.0",
+    "three": "^0.182.0",
     "tslib": "^2.6.2",
     "viem": "1.21.4",
     "wagmi": "1.4.13",
@@ -112,9 +113,9 @@
     "zustand": "^4.4.7"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
-    "@babel/plugin-transform-class-static-block": "^7.26.0",
+    "@babel/core": "^7.27.4",
+    "@babel/plugin-transform-class-static-block": "^7.27.1",
+    "@babel/plugin-transform-export-namespace-from": "^7.27.1",
     "@nrwl/js": "17.3.1",
     "@nrwl/workspace": "17.3.1",
     "@nx/detox": "17.3.1",
@@ -123,18 +124,19 @@
     "@nx/jest": "17.3.1",
     "@nx/react-native": "17.3.1",
     "@nx/web": "17.3.1",
-    "@react-native-community/cli": "12.2.0",
-    "@react-native-community/cli-platform-android": "12.2.0",
-    "@react-native-community/cli-platform-ios": "12.2.0",
+    "@react-native-community/cli": "20.0.0",
+    "@react-native-community/cli-platform-android": "20.0.0",
+    "@react-native-community/cli-platform-ios": "20.0.0",
     "@react-native-community/eslint-config": "^3.0.2",
-    "@react-native/metro-config": "^0.73.2",
+    "@react-native/babel-preset": "0.83.1",
+    "@react-native/metro-config": "0.83.1",
+    "@react-native/typescript-config": "0.83.1",
     "@testing-library/jest-dom": "^6.1.5",
     "@testing-library/jest-native": "5.4.3",
     "@testing-library/react-native": "12.4.1",
-    "@types/axios": "^0.14.0",
     "@types/jest": "29.5.10",
     "@types/node": "^18.16.9",
-    "@types/react": "18.2.39",
+    "@types/react": "^19.1.6",
     "@types/react-native-background-timer": "^2.0.2",
     "@types/three": "^0.159.0",
     "@typescript-eslint/eslint-plugin": "6.13.2",
@@ -153,21 +155,15 @@
     "jest-circus": "29.7.0",
     "jest-environment-jsdom": "29.7.0",
     "jest-react-native": "18.0.0",
-    "metro": "0.80.1",
-    "metro-babel-register": "0.80.1",
-    "metro-react-native-babel-preset": "0.77.0",
-    "metro-resolver": "0.80.1",
+    "metro": "^0.82.2",
+    "metro-resolver": "^0.82.2",
     "nx": "17.3.1",
     "prettier": "3.1.0",
     "react-native-config": "1.5.1",
-    "react-test-renderer": "18.2.0",
+    "react-test-renderer": "19.0.0",
     "ts-jest": "29.1.1",
     "ts-node": "10.9.1",
-    "typescript": "5.3.2"
-  },
-  "resolutions": {
-    "react-native-svg": "12.3.0",
-    "react-native-redash": "^17.0.0"
+    "typescript": "5.8.3"
   },
   "packageManager": "yarn@3.6.4+sha512.e70835d4d6d62c07be76b3c1529cb640c7443f0fe434ef4b6478a5a399218cbaf1511b396b3c56eb03bc86424cff2320f6167ad2fde273aa0df6e60b7754029f"
 }
