--- a/apps/box/android/app/build.gradle
+++ b/apps/box/android/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: "com.android.application"
+apply plugin: "org.jetbrains.kotlin.android"
 apply plugin: "com.facebook.react"
 apply plugin: 'com.google.gms.google-services'
 apply plugin: 'com.google.firebase.crashlytics'
@@ -51,6 +52,8 @@ react {
     //   The list of flags to pass to the Hermes compiler. By default is "-O", "-output-source-map"
     // hermesFlags = ["-O", "-output-source-map"]
     entryFile = file("../../src/main.tsx")
+
+    autolinkLibrariesWithApp()
 }
 
 /**
@@ -62,30 +65,30 @@ def enableProguardInReleaseBuilds = false
  * The preferred build flavor of JavaScriptCore (JSC)
  *
  * For example, to use the international variant, you can use:
- * `def jscFlavor = 'org.webkit:android-jsc-intl:+'`
+ * `def jscFlavor = 'io.github.nicutor:jsc-android-intl:+'`
  *
  * The international variant includes ICU i18n library and necessary data
  * allowing to use e.g. `Date.toLocaleString` and `String.localeCompare` that
  * give correct results when using with locales other than en-US. Note that
  * this variant is about 6MiB larger per architecture than default.
  */
-def jscFlavor = 'org.webkit:android-jsc:+'
+def jscFlavor = 'io.github.nicutor:jsc-android:2026004.+'
 
 
 android {
     ndkVersion rootProject.ext.ndkVersion
 
-    compileSdkVersion rootProject.ext.compileSdkVersion
+    compileSdk rootProject.ext.compileSdkVersion
 
     namespace "land.fx.blox"
+
     defaultConfig {
         applicationId "land.fx.blox"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 248
         versionName "2.2.3"
-        // buildConfigField "boolean", "IS_NEW_ARCHITECTURE_ENABLED", isNewArchitectureEnabled().toString()
-             
+
         testBuildType System.getProperty('testBuildType', 'debug')
         testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
     }
@@ -98,12 +101,10 @@ android {
             keyPassword 'android'
         }
     }
-    packagingOptions {
-        pickFirst 'lib/arm64-v8a/liblog.so'
-        pickFirst 'lib/armeabi-v7a/liblog.so'
-        pickFirst 'lib/x86/liblog.so'
-        pickFirst 'lib/x86_64/liblog.so'
-        // Add other libraries here if necessary
+    packaging {
+        jniLibs {
+            pickFirsts += ['lib/arm64-v8a/liblog.so', 'lib/armeabi-v7a/liblog.so', 'lib/x86/liblog.so', 'lib/x86_64/liblog.so']
+        }
     }
     buildTypes {
         debug {
@@ -115,9 +116,9 @@ android {
             signingConfig signingConfigs.debug
             minifyEnabled enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
-            
+
             proguardFile "${rootProject.projectDir}/../node_modules/detox/android/detox/proguard-rules-app.pro"
-            
+
             /* Add the firebaseCrashlytics extension (by default,
             * it's disabled to improve build speeds) and set
             * nativeSymbolUploadEnabled to true along with a pointer to native libs. */
@@ -138,21 +139,10 @@ dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
 
     androidTestImplementation('com.wix:detox:+')
-    implementation 'androidx.appcompat:appcompat:1.1.0'
-    
-    // if (isNewArchitectureEnabled()) {
-    //     implementation project(":ReactAndroid")
-    // } else {
-        implementation 'com.facebook.react:react-native:+'
-    // }
-    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.0.0"
+    implementation 'androidx.appcompat:appcompat:1.6.1'
 
-    debugImplementation("com.facebook.flipper:flipper:${FLIPPER_VERSION}")
-    debugImplementation("com.facebook.flipper:flipper-network-plugin:${FLIPPER_VERSION}") {
-        exclude group:'com.squareup.okhttp3', module:'okhttp'
-    }
+    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
 
-    debugImplementation("com.facebook.flipper:flipper-fresco-plugin:${FLIPPER_VERSION}")
     if (hermesEnabled.toBoolean()) {
         implementation("com.facebook.react:hermes-android")
     } else {
@@ -160,5 +150,3 @@ dependencies {
     }
     androidTestImplementation('com.wix:detox:+')
 }
-
-apply from: file("../../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesAppBuildGradle(project)
