--- a/apps/box/android/app/src/debug/AndroidManifest.xml
+++ b/apps/box/android/app/src/debug/AndroidManifest.xml
@@ -7,10 +7,6 @@
     <application
         android:usesCleartextTraffic="true"
         tools:targetApi="28"
-        tools:ignore="GoogleAppIndexingWarning"
-        tools:replace="android:allowBackup"
-        android:allowBackup="false"
-        android:networkSecurityConfig="@xml/network_security_config">
-        <activity android:name="com.facebook.react.devsupport.DevSettingsActivity" android:exported="false" />
+        tools:ignore="GoogleAppIndexingWarning">
     </application>
 </manifest>
