--- a/apps/box/android/build.gradle
+++ b/apps/box/android/build.gradle
@@ -2,14 +2,12 @@
 
 buildscript {
     ext {
-        buildToolsVersion = "34.0.0"
         minSdkVersion = 26
-        compileSdkVersion = 34
+        compileSdkVersion = 35
         targetSdkVersion = 35
-        kotlinVersion = "1.8.20"
-        enableHermes = true
-        // We use NDK 23 which has both M1 support and is the side-by-side NDK version from AGP.
-        ndkVersion = "26.2.11394342"
+        ndkVersion = "27.1.12297006"
+        kotlinVersion = "2.0.21"
+        agpVersion = "8.9.0"
     }
     repositories {
         google()
@@ -17,15 +15,18 @@ buildscript {
         maven { url 'https://jitpack.io' }
     }
     dependencies {
-        classpath("com.android.tools.build:gradle")
-        classpath("com.facebook.react:react-native-gradle-plugin")
-        classpath("org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion")
-        // Add the dependency for the Google services Grad
-        classpath 'com.google.gms:google-services:4.3.15'
+        classpath("com.android.tools.build:gradle:${agpVersion}")
+        classpath("org.jetbrains.kotlin:kotlin-gradle-plugin:${kotlinVersion}")
+        // Add the dependency for the Google services Gradle plugin
+        classpath 'com.google.gms:google-services:4.4.2'
 
         // NOTE: 2.9.4 has issues: https://github.com/invertase/react-native-firebase/issues/6983
-        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.9.2'
+        classpath 'com.google.firebase:firebase-crashlytics-gradle:3.0.2'
     }
+}
+
+plugins {
+    id("com.facebook.react.rootproject")
 }
 
 allprojects {
