--- a/apps/box/package.json
+++ b/apps/box/package.json
@@ -1,6 +1,6 @@
 {
   "name": "box",
-  "version": "2.2.3",
+  "version": "2.2.4",
   "private": true,
   "dependencies": {
     "@functionland/fula-sec": "*",
@@ -8,14 +8,14 @@
     "@gorhom/bottom-sheet": "*",
     "@metamask/sdk-react": "*",
     "@notifee/react-native": "*",
-    "@react-native-async-storage/async-storage": "1.18.2",
+    "@react-native-async-storage/async-storage": "*",
     "@react-native-clipboard/clipboard": "*",
-    "@react-native-community/netinfo": "9.3.10",
-    "@react-native-community/slider": "4.4.2",
+    "@react-native-community/netinfo": "*",
+    "@react-native-community/slider": "*",
     "@react-native-firebase/app": "*",
     "@react-native-firebase/crashlytics": "*",
-    "@react-native-picker/picker": "2.4.10",
-    "@react-native/metro-config": "^0.73.2",
+    "@react-native-picker/picker": "*",
+    "@react-native/metro-config": "*",
     "@react-navigation/bottom-tabs": "*",
     "@react-navigation/material-top-tabs": "*",
     "@react-navigation/native": "*",
@@ -23,7 +23,7 @@
     "@react-navigation/stack": "*",
     "@react-spring/three": "*",
     "@react-three/fiber": "*",
-    "@shopify/react-native-skia": "0.1.228",
+    "@shopify/react-native-skia": "*",
     "@shopify/restyle": "*",
     "@testing-library/jest-native": "*",
     "@testing-library/react-native": "*",
@@ -31,47 +31,47 @@
     "@walletconnect/encoding": "*",
     "@walletconnect/react-native-compat": "*",
     "@web3modal/wagmi-react-native": "*",
-    "axios": "^1.10.0",
+    "axios": "*",
     "big-integer": "*",
     "expo": "*",
-    "expo-gl": "~13.0.1",
+    "expo-gl": "*",
     "expo-three": "*",
-    "metro-config": "*",
-    "moment": "2.29.4",
-    "multiformats": "^12.1.3",
+    "moment": "*",
+    "multiformats": "*",
     "node-libs-react-native": "*",
     "react": "*",
     "react-content-loader": "*",
-    "react-native": "0.73.2",
+    "react-native": "*",
     "react-native-background-timer": "*",
     "react-native-ble-manager": "*",
     "react-native-config": "*",
     "react-native-device-info": "*",
     "react-native-elements": "*",
-    "react-native-gesture-handler": "~2.14.0",
-    "react-native-get-random-values": "~1.9.0",
+    "react-native-gesture-handler": "*",
+    "react-native-get-random-values": "*",
     "react-native-keyboard-aware-scroll-view": "*",
     "react-native-keychain": "*",
     "react-native-localize": "*",
     "react-native-modal": "*",
-    "react-native-pager-view": "6.2.0",
+    "react-native-pager-view": "*",
     "react-native-paper": "*",
     "react-native-randombytes": "*",
-    "react-native-reanimated": "~3.6.2",
+    "react-native-reanimated": "*",
     "react-native-reanimated-carousel": "*",
+    "react-native-worklets": "*",
     "react-native-redash": "*",
-    "react-native-safe-area-context": "4.6.3",
-    "react-native-screens": "~3.29.0",
-    "react-native-svg": "13.9.0",
+    "react-native-safe-area-context": "*",
+    "react-native-screens": "*",
+    "react-native-svg": "*",
     "react-native-svg-transformer": "*",
     "react-native-tab-view": "*",
     "react-native-url-polyfill": "*",
-    "react-native-webview": "13.2.2",
+    "react-native-webview": "*",
     "react-native-wheel-color-picker": "*",
     "react-native-wifi-reborn": "*",
     "react-native-zeroconf": "*",
     "text-encoding-polyfill": "*",
-    "three": "^0.145.0",
+    "three": "*",
     "viem": "*",
     "wagmi": "*",
     "zustand": "*",
@@ -84,9 +84,34 @@
     "react-syntax-highlighter": "*",
     "i18next": "*",
     "react-i18next": "*",
-    "i18next-resources-to-backend": "*"
+    "i18next-resources-to-backend": "*",
+    "metro-config": "*",
+    "@babel/core": "*",
+    "@babel/preset-env": "*",
+    "@babel/runtime": "*",
+    "@react-native-community/cli": "*",
+    "@react-native-community/cli-platform-android": "*",
+    "@react-native-community/cli-platform-ios": "*",
+    "@react-native/babel-preset": "*",
+    "@types/react": "*",
+    "metro": "*",
+    "typescript": "*",
+    "@react-native/typescript-config": "*"
   },
   "devDependencies": {
-    "@types/react-native-background-timer": "^2.0.2"
+    "@babel/core": "*",
+    "@babel/preset-env": "*",
+    "@babel/runtime": "*",
+    "@react-native-community/cli": "*",
+    "@react-native-community/cli-platform-android": "*",
+    "@react-native-community/cli-platform-ios": "*",
+    "@react-native/babel-preset": "*",
+    "@react-native/eslint-config": "*",
+    "@react-native/typescript-config": "*",
+    "@types/react": "*",
+    "@types/react-native-background-timer": "*",
+    "metro": "*",
+    "metro-config": "*",
+    "typescript": "*"
   }
 }
