support for 16KB Page size for Android 15+

--- a/apps/box/android/app/build.gradle
+++ b/apps/box/android/app/build.gradle
@@ -91,6 +91,13 @@ android {
 
         testBuildType System.getProperty('testBuildType', 'debug')
         testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
+
+        // Enable 16 KB page size support for Android 15+ (required by Google Play from May 2026)
+        externalNativeBuild {
+            cmake {
+                arguments "-DANDROID_SUPPORT_FLEXIBLE_PAGE_SIZES=ON"
+            }
+        }
     }
 
     signingConfigs {
