--- a/package.json
+++ b/package.json
@@ -54,7 +54,6 @@
     "@walletconnect/encoding": "^1.0.2",
     "@walletconnect/react-native-compat": "^2.10.5",
     "@web3modal/core-react-native": "*",
-    "@web3modal/wagmi-react-native": "^1.1.1",
     "axios": "^1.13.2",
     "big-integer": "^1.6.52",
     "eciesjs": "^0.4.6",
@@ -64,7 +63,7 @@
     "expo-font": "~14.0.11",
     "expo-gl": "~16.0.9",
     "expo-three": "^8.0.0",
-    "i18next": "^24.2.2",
+    "i18next": "^25.8.0",
     "i18next-resources-to-backend": "^1.2.1",
     "moment": "^2.30.1",
     "node-libs-react-native": "^1.2.1",
@@ -77,40 +76,38 @@
     "react-native-ble-manager": "^12.4.4",
     "react-native-device-info": "^14.0.4",
     "react-native-elements": "^3.4.3",
-    "react-native-gesture-handler": "^2.24.0",
-    "react-native-get-random-values": "^1.11.0",
+    "react-native-gesture-handler": "^2.30.0",
+    "react-native-get-random-values": "^2.0.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
-    "react-native-keychain": "^9.2.2",
-    "react-native-localize": "^3.4.1",
-    "react-native-modal": "^13.0.1",
-    "react-native-pager-view": "^6.6.1",
-    "react-native-paper": "^5.13.1",
-    "react-native-permissions": "^5.4.0",
-    "react-native-qrcode-svg": "^6.3.14",
-    "react-native-randombytes": "^3.6.1",
+    "react-native-keychain": "^10.0.0",
+    "react-native-localize": "^3.6.1",
+    "react-native-modal": "^14.0.0-rc.1",
+    "react-native-pager-view": "^8.0.0",
+    "react-native-paper": "^5.14.5",
+    "react-native-permissions": "^5.4.4",
+    "react-native-qrcode-svg": "^6.3.21",
     "react-native-reanimated": "^4.2.1",
     "react-native-reanimated-carousel": "^4.0.3",
-    "react-native-redash": "^18.1.3",
-    "react-native-safe-area-context": "^5.3.0",
-    "react-native-screens": "^4.10.0",
-    "react-native-svg": "^15.11.2",
-    "react-native-svg-transformer": "^1.5.0",
+    "react-native-redash": "^18.1.4",
+    "react-native-safe-area-context": "^5.6.2",
+    "react-native-screens": "^4.20.0",
+    "react-native-svg": "^15.15.1",
+    "react-native-svg-transformer": "^1.5.2",
     "react-native-syntax-highlighter": "^2.1.0",
-    "react-native-tab-view": "^4.0.5",
-    "react-native-url-polyfill": "^2.0.0",
-    "react-native-vector-icons": "^10.2.0",
-    "react-native-webview": "^13.13.5",
+    "react-native-tab-view": "^4.2.2",
+    "react-native-url-polyfill": "^3.0.0",
+    "react-native-webview": "^13.16.0",
     "react-native-wheel-color-picker": "^1.2.0",
-    "react-native-wifi-reborn": "^4.13.0",
+    "react-native-wifi-reborn": "^4.13.6",
     "react-native-worklets": "^0.7.2",
-    "react-native-zeroconf": "^0.13.8",
+    "react-native-zeroconf": "^0.14.0",
     "text-encoding-polyfill": "^0.6.7",
     "three": "^0.182.0",
-    "tslib": "^2.6.2",
-    "viem": "1.21.4",
-    "wagmi": "1.4.13",
+    "tslib": "^2.8.1",
+    "viem": "2.44.4",
+    "wagmi": "3.3.4",
     "whatwg-fetch": "^3.6.20",
-    "zustand": "^4.4.7"
+    "zustand": "^5.0.10"
   },
   "devDependencies": {
     "@babel/core": "^7.27.4",
