--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-clipboard/clipboard": "^1.16.3",
     "@react-native-community/netinfo": "^11.4.1",
-    "@react-native-community/slider": "^5.1.2",
+    "@react-native-community/slider": "5.1.1",
     "@react-native-firebase/app": "^23.8.3",
     "@react-native-firebase/crashlytics": "^23.8.3",
     "@react-native-picker/picker": "^2.11.4",
@@ -58,18 +58,18 @@
     "big-integer": "^1.6.52",
     "eciesjs": "^0.4.6",
     "ethers": "5.7.2",
-    "expo": "~54.0.31",
-    "expo-asset": "~12.0.12",
-    "expo-font": "~14.0.11",
-    "expo-gl": "~16.0.9",
+    "expo": "55.0.0-preview.1",
+    "expo-asset": "~55.0.0",
+    "expo-font": "~55.0.0",
+    "expo-gl": "~55.0.0",
     "expo-three": "^8.0.0",
     "i18next": "^25.8.0",
     "i18next-resources-to-backend": "^1.2.1",
     "moment": "^2.30.1",
     "node-libs-react-native": "^1.2.1",
-    "react": "19.0.0",
+    "react": "19.2.0",
     "react-content-loader": "^7.0.2",
-    "react-dom": "19.0.0",
+    "react-dom": "19.2.0",
     "react-i18next": "^15.4.1",
     "react-native": "0.83.1",
     "react-native-background-timer": "^2.4.1",
@@ -77,7 +77,7 @@
     "react-native-device-info": "^14.0.4",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "^2.30.0",
-    "react-native-get-random-values": "^2.0.0",
+    "react-native-get-random-values": "~1.11.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-keychain": "^10.0.0",
     "react-native-localize": "^3.6.1",
@@ -99,7 +99,7 @@
     "react-native-webview": "^13.16.0",
     "react-native-wheel-color-picker": "^1.2.0",
     "react-native-wifi-reborn": "^4.13.6",
-    "react-native-worklets": "^0.7.2",
+    "react-native-worklets": "0.7.1",
     "react-native-zeroconf": "^0.14.0",
     "text-encoding-polyfill": "^0.6.7",
     "three": "^0.182.0",
@@ -131,7 +131,7 @@
     "@testing-library/jest-dom": "^6.1.5",
     "@testing-library/jest-native": "5.4.3",
     "@testing-library/react-native": "12.4.1",
-    "@types/jest": "29.5.10",
+    "@types/jest": "29.5.14",
     "@types/node": "^18.16.9",
     "@types/react": "^19.1.6",
     "@types/react-native-background-timer": "^2.0.2",
@@ -152,7 +152,7 @@
     "jest-circus": "29.7.0",
     "jest-environment-jsdom": "29.7.0",
     "jest-react-native": "18.0.0",
-    "metro": "^0.82.2",
+    "metro": "^0.83.1",
     "metro-resolver": "^0.82.2",
     "nx": "22.3.3",
     "prettier": "3.1.0",
@@ -160,7 +160,7 @@
     "react-test-renderer": "19.0.0",
     "ts-jest": "29.1.1",
     "ts-node": "10.9.1",
-    "typescript": "5.8.3"
+    "typescript": "~5.9.2"
   },
   "packageManager": "yarn@3.6.4+sha512.e70835d4d6d62c07be76b3c1529cb640c7443f0fe434ef4b6478a5a399218cbaf1511b396b3c56eb03bc86424cff2320f6167ad2fde273aa0df6e60b7754029f"
 }
