--- a/apps/box/package.json
+++ b/apps/box/package.json
@@ -3,6 +3,9 @@
   "version": "2.2.4",
   "private": true,
   "dependencies": {
+    "@babel/core": "*",
+    "@babel/preset-env": "*",
+    "@babel/runtime": "*",
     "@functionland/fula-sec": "*",
     "@functionland/react-native-fula": "*",
     "@gorhom/bottom-sheet": "*",
@@ -10,12 +13,17 @@
     "@notifee/react-native": "*",
     "@react-native-async-storage/async-storage": "*",
     "@react-native-clipboard/clipboard": "*",
+    "@react-native-community/cli": "*",
+    "@react-native-community/cli-platform-android": "*",
+    "@react-native-community/cli-platform-ios": "*",
     "@react-native-community/netinfo": "*",
     "@react-native-community/slider": "*",
     "@react-native-firebase/app": "*",
     "@react-native-firebase/crashlytics": "*",
     "@react-native-picker/picker": "*",
+    "@react-native/babel-preset": "*",
     "@react-native/metro-config": "*",
+    "@react-native/typescript-config": "*",
     "@react-navigation/bottom-tabs": "*",
     "@react-navigation/material-top-tabs": "*",
     "@react-navigation/native": "*",
@@ -27,20 +35,30 @@
     "@shopify/restyle": "*",
     "@testing-library/jest-native": "*",
     "@testing-library/react-native": "*",
+    "@types/react": "*",
+    "@types/react-native-background-timer": "*",
     "@visx/scale": "*",
     "@walletconnect/encoding": "*",
     "@walletconnect/react-native-compat": "*",
     "@web3modal/wagmi-react-native": "*",
     "axios": "*",
+    "base-64": "*",
     "big-integer": "*",
+    "ethers": "*",
     "expo": "*",
+    "expo-file-system": "~55.0.0",
     "expo-gl": "*",
     "expo-three": "*",
+    "i18next": "*",
+    "i18next-resources-to-backend": "*",
+    "metro": "*",
+    "metro-config": "*",
     "moment": "*",
     "multiformats": "*",
     "node-libs-react-native": "*",
     "react": "*",
     "react-content-loader": "*",
+    "react-i18next": "*",
     "react-native": "*",
     "react-native-background-timer": "*",
     "react-native-ble-manager": "*",
@@ -55,48 +73,31 @@
     "react-native-modal": "*",
     "react-native-pager-view": "*",
     "react-native-paper": "*",
+    "react-native-permissions": "*",
     "react-native-randombytes": "*",
     "react-native-reanimated": "*",
     "react-native-reanimated-carousel": "*",
-    "react-native-worklets": "*",
     "react-native-redash": "*",
     "react-native-safe-area-context": "*",
     "react-native-screens": "*",
     "react-native-svg": "*",
     "react-native-svg-transformer": "*",
+    "react-native-syntax-highlighter": "*",
     "react-native-tab-view": "*",
     "react-native-url-polyfill": "*",
     "react-native-webview": "*",
     "react-native-wheel-color-picker": "*",
     "react-native-wifi-reborn": "*",
+    "react-native-worklets": "*",
     "react-native-zeroconf": "*",
+    "react-syntax-highlighter": "*",
     "text-encoding-polyfill": "*",
     "three": "*",
+    "typescript": "*",
     "viem": "*",
     "wagmi": "*",
-    "zustand": "*",
-    "@types/react-native-background-timer": "*",
-    "ethers": "*",
     "whatwg-fetch": "*",
-    "react-native-permissions": "*",
-    "base-64": "*",
-    "react-native-syntax-highlighter": "*",
-    "react-syntax-highlighter": "*",
-    "i18next": "*",
-    "react-i18next": "*",
-    "i18next-resources-to-backend": "*",
-    "metro-config": "*",
-    "@babel/core": "*",
-    "@babel/preset-env": "*",
-    "@babel/runtime": "*",
-    "@react-native-community/cli": "*",
-    "@react-native-community/cli-platform-android": "*",
-    "@react-native-community/cli-platform-ios": "*",
-    "@react-native/babel-preset": "*",
-    "@types/react": "*",
-    "metro": "*",
-    "typescript": "*",
-    "@react-native/typescript-config": "*"
+    "zustand": "*"
   },
   "devDependencies": {
     "@babel/core": "*",
