--- a/package.json
+++ b/package.json
@@ -58,8 +58,9 @@
     "big-integer": "^1.6.52",
     "eciesjs": "^0.4.6",
     "ethers": "5.7.2",
-    "expo": "55.0.0-preview.1",
+    "expo": "55.0.0-preview.2",
     "expo-asset": "~55.0.0",
+    "expo-file-system": "~55.0.0",
     "expo-font": "~55.0.0",
     "expo-gl": "~55.0.0",
     "expo-three": "^8.0.0",
@@ -139,6 +140,7 @@
     "@typescript-eslint/eslint-plugin": "6.13.2",
     "@typescript-eslint/parser": "6.13.2",
     "babel-jest": "29.7.0",
+    "babel-plugin-transform-import-meta": "^2.3.3",
     "detox": "20.13.5",
     "eslint": "8.48.0",
     "eslint-config-prettier": "9.0.0",
