--- a/apps/box/package.json
+++ b/apps/box/package.json
@@ -29,8 +29,6 @@
     "@react-navigation/native": "*",
     "@react-navigation/native-stack": "*",
     "@react-navigation/stack": "*",
-    "@react-spring/three": "*",
-    "@react-three/fiber": "*",
     "@shopify/react-native-skia": "*",
     "@shopify/restyle": "*",
     "@testing-library/jest-native": "*",
@@ -45,10 +43,6 @@
     "base-64": "*",
     "big-integer": "*",
     "ethers": "*",
-    "expo": "*",
-    "expo-file-system": "~55.0.0",
-    "expo-gl": "*",
-    "expo-three": "*",
     "i18next": "*",
     "i18next-resources-to-backend": "*",
     "metro": "*",
@@ -74,7 +68,6 @@
     "react-native-pager-view": "*",
     "react-native-paper": "*",
     "react-native-permissions": "*",
-    "react-native-randombytes": "*",
     "react-native-reanimated": "*",
     "react-native-reanimated-carousel": "*",
     "react-native-redash": "*",
@@ -92,12 +85,12 @@
     "react-native-zeroconf": "*",
     "react-syntax-highlighter": "*",
     "text-encoding-polyfill": "*",
-    "three": "*",
     "typescript": "*",
     "viem": "*",
     "wagmi": "*",
     "whatwg-fetch": "*",
-    "zustand": "*"
+    "zustand": "*",
+    "react-native-randombytes": "*"
   },
   "devDependencies": {
     "@babel/core": "*",
