--- a/apps/box/ios/Podfile
+++ b/apps/box/ios/Podfile
@@ -44,17 +44,13 @@ target 'Box' do
     :app_path => "#{Pod::Config.instance.installation_root}/.."
   )
 
-  target 'BoxTests' do
-    inherit! :complete
-    # Pods for testing
-  end
-
   post_install do |installer|
     # https://github.com/facebook/react-native/blob/main/packages/react-native/scripts/react_native_pods.rb#L197-L202
     react_native_post_install(
       installer,
       config[:reactNativePath],
-      :mac_catalyst_enabled => false
+      :mac_catalyst_enabled => false,
+      # :ccache_enabled => true
     )
 
     installer.pods_project.targets.each do |target|
