--- a/apps/box/android/gradle.properties
+++ b/apps/box/android/gradle.properties
@@ -40,3 +40,7 @@ hermesEnabled=true
 
 # Enable edge-to-edge mode
 edgeToEdgeEnabled=false
+
+# 16KB page size support for Android 15+
+# This ensures native libraries are aligned for devices with 16KB memory page sizes
+android.experiments.cacheCompileLibClasses=true
