updated app wit himprovements
- updated rect-native-fula
- enhanced ble discoverability in multi-blox env
- enhanced not authorized handling for blox discovery
- switched wallet management to reown

--- a/package.json
+++ b/package.json
@@ -29,8 +29,6 @@
     "@functionland/fula-sec": "^2.0.0",
     "@functionland/react-native-fula": "1.57.1",
     "@gorhom/bottom-sheet": "^5.2.8",
-    "@metamask/sdk": "^0.34.0",
-    "@metamask/sdk-react": "^0.33.1",
     "@notifee/react-native": "^9.1.8",
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-clipboard/clipboard": "^1.16.3",
@@ -44,6 +42,8 @@
     "@react-navigation/native": "^7.1.28",
     "@react-navigation/native-stack": "^7.10.1",
     "@react-navigation/stack": "^7.6.16",
+    "@reown/appkit-ethers-react-native": "latest",
+    "@reown/appkit-react-native": "latest",
     "@rneui/base": "^4.0.0-rc.8",
     "@rneui/themed": "^4.0.0-rc.8",
     "@shopify/react-native-skia": "^2.4.14",
@@ -51,7 +51,6 @@
     "@visx/scale": "^3.12.0",
     "@walletconnect/encoding": "^1.0.2",
     "@walletconnect/react-native-compat": "^2.10.5",
-    "@web3modal/core-react-native": "*",
     "axios": "^1.13.2",
     "big-integer": "^1.6.52",
     "eciesjs": "^0.4.6",
@@ -97,7 +96,6 @@
     "text-encoding-polyfill": "^0.6.7",
     "tslib": "^2.8.1",
     "viem": "2.44.4",
-    "wagmi": "3.3.4",
     "whatwg-fetch": "^3.6.20",
     "zustand": "^5.0.10"
   },
