--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "react-dom": "19.2.0",
     "react-i18next": "^15.4.1",
     "react-native": "0.83.1",
+    "react-native-background-fetch": "^4.2.5",
     "react-native-background-timer": "^2.4.1",
     "react-native-ble-manager": "^12.4.4",
     "react-native-device-info": "^14.0.4",
